fixed spacing on index page so that the recommend button doesn't get forced to the bottom by Harry Potter (reduced padding on profile pic and button; set fixed width for book cover and text)

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -18,24 +18,23 @@
 
 
 .cat1 {
-position:relative;
-display: inline-block;
-float:left;
-padding-left: 5%;
-
+	position: relative;
+	display: inline-block;
+	float: left;
+	padding-left: 2%;
 }
-.cat2 {
-position: center;
-display: inline-block;
 
+.cat2 {
+	position: center;
+	display: inline-block;
+	width: 65%;
 }
 
 .cat3 {
-position:relative;
-display: inline-block;
-float:right;
-padding-right: 5%;
-
+	position: relative;
+	display: inline-block;
+	float: right;
+	padding-right: 2%;
 }
 
 .content{
